# open_spiel_public_state_cfr

./: .gitignore  compile_pscfr.sh  install_metacentrum.sh  install_pscfr.sh
open_spiel/: .gitignore  CMakeLists.txt  action_view.cc  action_view.h  custom_utils.h  normal_form_game.h  observer.cc  observer.h  policy.cc  policy.h  spiel.h  spiel_bots.cc  spiel_bots.h  spiel_utils.h
open_spiel/algorithms/: CMakeLists.txt  bandits.cc  bandits.h  bandits_policy.cc  bandits_policy.h  best_response.cc  best_response.h  cfr.cc  cfr.h  cfr_br.cc  cfr_br.h  dispatch_policy.h  history_tree.cc  history_tree.h  history_tree_test.cc  infostate_cfr.cc  infostate_cfr.h  infostate_cfr_test.cc  infostate_dl_cfr.cc  infostate_dl_cfr.h  infostate_dl_cfr_test.cc  infostate_tree.cc  infostate_tree.h  infostate_tree.hpp  infostate_tree_test.cc  is_mcts.cc  is_mcts.h  is_mcts_test.cc  poker_data.h  tabular_exploitability.cc
open_spiel/algorithms/alpha_zero_torch/: CMakeLists.txt  vpnet.h
open_spiel/algorithms/corr_dist/: afce.h  efce.h
open_spiel/algorithms/dqn_torch/: CMakeLists.txt
open_spiel/algorithms/ortools/: CMakeLists.txt  dl_oracle_evaluator.cc  dl_oracle_evaluator.h  dl_oracle_evaluator_test.cc  sequence_form_lp.cc  sequence_form_lp.h  sequence_form_lp_test.cc  trunk_exploitability.cc  trunk_exploitability.h  trunk_exploitability_test.cc
open_spiel/bots/roshambo/: roshambo_bot.h
open_spiel/examples/: CMakeLists.txt
open_spiel/game_transforms/: misere.h  turn_based_simultaneous_game.cc  turn_based_simultaneous_game.h  turn_based_simultaneous_game_test.cc
open_spiel/games/: CMakeLists.txt  blackjack.h  bridge_uncontested_bidding.h  chess.h  coordinated_mp.cc  dark_chess.h  game_picker.cc  game_picker.h  game_picker_test.cc  goofspiel.cc  goofspiel.h  kriegspiel.h  kuhn_poker.cc  leduc_poker.cc  matrix_games.cc  negotiation.h  nfg_game.cc  othello.h  rbc.h  tarok_test.cc  tic_tac_toe.h  universal_poker.cc  universal_poker.h  universal_poker_test.cc
open_spiel/games/mfg/: crowd_modelling.h  crowd_modelling_2d.h
open_spiel/higc/: CMakeLists.txt
open_spiel/higc/bots/: random_bot.cc
open_spiel/integration_tests/: api_test.py
open_spiel/integration_tests/playthroughs/: blotto.txt  goofspiel.txt  goofspiel_random_points_order.txt  goofspiel_turn_based.txt  kuhn_poker_2p.txt  kuhn_poker_3p.txt  leduc_poker_1540482260.txt  leduc_poker_3977671846.txt  leduc_poker_3p.txt  leduc_poker_3p_single_tensor.txt  leduc_poker_773740114.txt  matching_pennies_3p.txt  matrix_biased_mp.txt  matrix_cd.txt  matrix_coordination.txt  matrix_mp.txt  matrix_pd.txt  matrix_rps.txt  matrix_rpsw.txt  matrix_sh.txt  matrix_shapleys_game.txt  misere(game=kuhn_poker()).txt  normal_form_extensive_game(game=first_sealed_auction(players=3,max_value=3)).txt  python_iterated_prisoners_dilemma_turn_based.txt  python_kuhn_poker.txt  universal_poker.txt
open_spiel/libtorch/: .gitignore
open_spiel/papers_with_code/: CMakeLists.txt  README.md  TEMPLATE.md
open_spiel/papers_with_code/1906.06412.value_functions/: .gitignore  CMakeLists.txt  README.md  bot.cc  bot.h  bot_test.cc  br_against_uniform.cc  constraints.cc  constraints.h  continual_resolving_test.cc  continual_resolving_test.cpp  evaluator.cc  evaluator.h  evaluator_test.cc  evaluators.cc  evaluators.h  experience_replay.cc  experience_replay.h  generate_data.cc  generate_data.h  hand_table.cc  hand_table.h  hand_table_test.cc  include_libs_ordered.h  infostate_dl_cfr.cc  infostate_dl_cfr.h  infostate_dl_cfr_test.cc  infostate_tree_br.cc  infostate_tree_br.h  ismcts_playthroughs.cc  ismcts_playthroughs.h  ismcts_playthroughs_test.cc  libratus_endgame_values.h  metrics.cc  metrics.h  model_playground.py  my_main.cc  net_architectures.cc  net_architectures.h  net_batch.cc  (+74 more)
open_spiel/papers_with_code/1906.06412.value_functions/model_playground/: model_playground.py  plot_model_playground.py  run_model_playground.py
open_spiel/papers_with_code/1906.06412.value_functions/snapshots/iigs3/: random.model
open_spiel/papers_with_code/2006.08740.sound_search/: CMakeLists.txt  README.md  coordinated_mp.csv  generate_data.sh  kuhn_poker.csv  tabularize_oos.cc
open_spiel/papers_with_code/2007.14358.predictive_rm/: CMakeLists.txt  cfr_comparison.cc  cfr_comparison.py  cfr_comparison.sh
open_spiel/papers_with_code/public_state_cfr/: CMakeLists.txt  README.md  infostate_tree_br.cc  infostate_tree_br.h  my_main.cc  subgame.cc  subgame.h
open_spiel/python/: CMakeLists.txt
open_spiel/python/algorithms/: cfr_test.py
open_spiel/python/games/: kuhn_poker.py
open_spiel/python/pybind11/: bots.cc  pyspiel.cc
open_spiel/python/tests/: pyspiel_test.py
open_spiel/scripts/: git_post_commit.sh  global_variables.sh  install.sh
open_spiel/utils/: CMakeLists.txt  data_structures.h  format_observation.h  tree_map.h
